css/qp.css
/* ... */
.up-past-block {
    padding: 25px 25px 15px 25px;
    display: inline-block;
    width: 100%;
    cursor: pointer;
}

.up-past-date,
.up-past-loc p {
    font-size: 12px;
}

.up-past-block:hover {
    background: #71CC98;
}

.up-past-text a {
    text-decoration: none;
    color: #003C71;
}

.up-past-text a:hover {
    text-decoration: none;
    color: #003C71;
}

.up-past-block {
    margin-bottom: 20px;
    background: #fff;
    position: relative;
    color: #003C71;
}

.up-event-list a {
    color: #14171A;
}

.up-event-list:hover a {
    color: #71CC98;
}

.up-past-block .readmore-arrow {
    float: right;
    bottom: 0;
    position: absolute;
    right: 0px;
    display: none;
}

.up-past-block:hover .readmore-arrow {
    display: block;
    background: #003C71;
    padding: 3px 12px;
    color: #ffffff;
}

.up-loc,
.up-date {
    color: #657786;
}

.up-event-list:hover .up-date {
    color: #71CC98;
}

.up-event-list:hover .up-loc {
    color: #71CC98;
}

.up-head {
    color: #657786;
}

.past-head {
    color: #657786;
    border-bottom: 1px solid #707070;
}

.up-loc {
    margin-right: 10px;
}
.up-txt i {
    display: none;
}

/*.upcoming-nav.qp-h-latestnews-top {
    border-bottom: 1px solid #707070;
    float: right;
    width: 80%;
}*/
.up-event-mnth {
    color: #657786;
    font-size: 14px;
}

.up-past-date,
.up-past-loc {
    margin-bottom: 10px;
}
#past-content .d-flex.px-2:nth-child(4n+1) {
    padding-left: 0 !important;
}
.up-event-list:hover a i {
    display: inline-block !important;
}
/* HORIZONTAL */
@keyframes horizontal {
    0%{transform:translate(0,0)}
    6%{transform:translate(5px,0)}
    12%{transform:translate(0,0)}
    18%{transform:translate(5px,0)}
    24%{transform:translate(0,0)}
    30%{transform:translate(5px,0)}
    36%,100%{transform:translate(0,0)}
}
.faa-horizontal.animated,
.faa-horizontal.animated-hover:hover,
.faa-parent.animated-hover:hover > .faa-horizontal {
    animation: horizontal 2s ease infinite;
}
.faa-horizontal.animated.faa-fast,
.faa-horizontal.animated-hover.faa-fast:hover,
.faa-parent.animated-hover:hover > .faa-horizontal.faa-fast {
    animation: horizontal 1s ease infinite;
}
.faa-horizontal.animated.faa-slow,
.faa-horizontal.animated-hover.faa-slow:hover,
.faa-parent.animated-hover:hover > .faa-horizontal.faa-slow {
    animation: horizontal 3s ease infinite;
}
/************Upcoming Event-pop-up*******************/

.upop-nav a {
    font-size: 20px !important;
}

.up-pop .news-popup-image-content {}

.up-bottom {
    margin: 30px;
}

.upop-date {
    padding-bottom: 10px;
}

.upop.card {
    background-color: unset !important;
    border: none;

}

.upop .card-header {
    padding: 0px;
    padding-bottom: 10px !important;
    background-color: unset !important;
    border: none !important;
}

.upop .card-body {
    padding-bottom: 20px;
    border-bottom: 1px solid #707070 !important;
}

.upop p.card-header {
    color: #657786;
}

.upop .card-body:hover {
    padding-bottom: 18px;
    border-bottom: 3px solid #707070 !important;
}

.up-popup-image-content {
    position: absolute;
    bottom: 8px;

    z-index: 1;
    padding: 4% 6%;
}

.up-popup-image-content h1:after {
    border-bottom: 8px solid #71CC98;
    content: '';
    display: block;
    width: 45%;
    padding-top: 4%;
}

.upop .card-text a {
    color: #14171a;
}

.qp-h-latestnews .nav .nav-item a:hover {
    color: #003C71 !important;
    border-bottom: 3px solid #71CC98;
    cursor: pointer;
}

/************Upcoming Event-pop-up ends *******************/

/************ Login and Sign Up *************/
#main-menu li a {
    font-size: 0.75rem !important;
}
#qp-loginform .input{
    border-top: none !important;
    border-left: none !important;
    border-right: none !important;
    width: 100% !important;
    margin-top: 15px;
    padding-bottom: 10px;
    background: transparent !important;
}
#qp-loginform #wp-submit, .btn-signup{
    width: 120px;
    padding: 7px 10px;
    border: none;
    background: #71cc98;
    color: #003C71;
    font-size: 13px;
    border-radius: 0px !important;
    box-shadow: none !important;
    -webkit-box-shadow: none !important; 
}

#qp-loginform #wp-submit:hover, .btn-signup:hover{
    cursor: pointer;
   background: #003C71;
   color: #fff;
   transition: .5s;
   box-shadow: none !important;
    -webkit-box-shadow: none !important;
}

.btn-signup:focus{
    box-shadow: none !important;
    -webkit-box-shadow: none !important;
}
.sec-bg-login{
    background: #f3f3f3;
    height: 100vh;
}
#main-menu li:last-child a{
    text-align: center;
}

#main-menu li:last-child:hover a{
    border-bottom: none !important;
    cursor: pointer;
    background: none !important;
}
#qp-loginform .dropdown-menu .show{
    text-align: center;
}

#qp-loginform .dropdown-item .active,#qp-loginform .dropdown-item:active{
    background: none !important;
}

.qp-fields{
    border-top: none !important;
    border-left: none !important;
    border-right: none !important;
    background: none !important;
    border-radius: 0px !important;
}
.field-icon {
  float: right;
  margin-left: -20px;
  margin-top: 8px;
  position: relative;
  z-index: 4;
}

.qp-fields:focus{
    box-shadow: none !important;
    -webkit-box-shadow: none !important;
}

.error{
    color: red;
    right: 25px;
    bottom: 10px;
    position: absolute;
}
.error-captcha{
    color: red;
    right: 25px;
    bottom: 75px;
    position: absolute;
}

/*********** Login page ends *********/
.up-date {
    text-transform: uppercase;
}

ul.event-filterlist, ul#filter {
    margin-bottom: -1px;
}
/*a.pop-up-hover > img {
    width: 354px;
    height: 242px;
}*/
.qp-sticky {
    position: fixed;
    width: 100%;
    background: #ffffff !important;
}
/************Upcoming Event-pop-up ends *******************/
.sub-clr{
    color: #ccd6dd;
}

.qp-theme-bg:hover {
    box-shadow: none;
}
/* ... */

